operator/config/manager/metrics_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: module-manager.kyma-project.io
  name: controller-manager-metrics-service
  namespace: system
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    appProtocol: http
    targetPort: metrics
  selector:
    app.kubernetes.io/component: module-manager.kyma-project.io
